--- a/manifests/applications/five31/backend-deployment.yml
+++ b/manifests/applications/five31/backend-deployment.yml
@@ -28,7 +28,7 @@ spec:
             - name: DATABASE_USERNAME
               valueFrom:
                 configMapKeyRef:
-                  key: POSTGRES_USERNAME
+                  key: POSTGRES_USER
                   name: database-config
             - name: DATABASE_PASSWORD
               valueFrom:
