--- a/manifests/applications/five31/backend-configmap.yml
+++ b/manifests/applications/five31/backend-configmap.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  DATABASE_URL: jdbc:postgresql://postgres.postgres.svc.cluster.local:5432/postgres
+  DATABASE_URL: jdbc:postgresql://database.five31.svc.cluster.local:5432/postgres
 kind: ConfigMap
 metadata:
   creationTimestamp: null
