Allow keel to schedule on control-plane, no arm image

--- a/manifests/cluster-addons/keel/values.yaml
+++ b/manifests/cluster-addons/keel/values.yaml
@@ -4,3 +4,8 @@ keel:
 
   secret:
     enabled: false
+
+  tolerations:
+    - key: 'node-role.kubernetes.io/control-plane'
+      operator: 'Exists'
+      effect: 'NoSchedule'
