Only schedule keel on amd64 nodes

--- a/manifests/cluster-addons/keel/values.yaml
+++ b/manifests/cluster-addons/keel/values.yaml
@@ -5,6 +5,9 @@ keel:
   secret:
     enabled: false
 
+  nodeSelector:
+    kubernetes.io/arch: amd64
+
   tolerations:
     - key: 'node-role.kubernetes.io/control-plane'
       operator: 'Exists'
