--- a/manifests/cluster-addons/k8s-monitoring/values.yaml
+++ b/manifests/cluster-addons/k8s-monitoring/values.yaml
@@ -1,3 +1,9 @@
 k8s-monitoring:
   cluster:
     name: whpah
+
+  clusterMetrics: {}
+  clusterEvents: {}
+
+  alloy-metrics: {}
+  alloy-events: {}
