--- a/manifests/cluster-addons/k8s-monitoring/values.yaml
+++ b/manifests/cluster-addons/k8s-monitoring/values.yaml
@@ -2,7 +2,9 @@ k8s-monitoring:
   cluster:
     name: whpah
 
-  clusterMetrics: {}
+  clusterMetrics:
+    enabled: true
+
   clusterEvents: {}
 
   alloy-metrics: {}
