--- a/manifests/cluster-addons/monitoring/values.yaml
+++ b/manifests/cluster-addons/monitoring/values.yaml
@@ -1,16 +1,66 @@
 k8s-monitoring:
   cluster:
-    name: whpah
+    name: meta-monitoring-tutorial
 
-  destinations: []
+  destinations:
+    - name: loki
+      type: loki
+      url: http://loki-gateway.meta.svc.cluster.local/loki/api/v1/push
 
-  clusterMetrics:
+  clusterEvents:
     enabled: true
+    collector: alloy-logs
+    namespaces:
+      - meta
+      - prod
 
-  clusterEvents: {}
+  nodeLogs:
+    enabled: false
 
-  alloy-metrics: {}
-  alloy-events: {}
+  podLogs:
+    enabled: true
+    gatherMethod: kubernetesApi
+    collector: alloy-logs
+    labelsToKeep:
+      [
+        'app_kubernetes_io_name',
+        'container',
+        'instance',
+        'job',
+        'level',
+        'namespace',
+        'service_name',
+        'service_namespace',
+        'deployment_environment',
+        'deployment_environment_name',
+      ]
+    structuredMetadata:
+      pod: pod # Set structured metadata "pod" from label "pod"
+    namespaces:
+      - meta
+      - prod
+
+  # Collectors
+  alloy-singleton:
+    enabled: false
+
+  alloy-metrics:
+    enabled: false
+
+  alloy-logs:
+    enabled: true
+    # Required when using the Kubernetes API to pod logs
+    alloy:
+      mounts:
+        varlog: false
+      clustering:
+        enabled: true
+
+  alloy-profiles:
+    enabled: false
+
+  alloy-receiver:
+    enabled: false
 
 loki:
   loki:
