Comment out persistence

--- a/manifests/cluster-addons/monitoring/values.yaml
+++ b/manifests/cluster-addons/monitoring/values.yaml
@@ -141,9 +141,9 @@ loki:
     replicas: 0
 
 grafana:
-  persistence:
-  type: pvc
-  enabled: true
+  # persistence:
+  #   type: pvc
+  #   enabled: true
 
   admin:
     existingSecret: 'grafana-admin-secret'
