--- a/manifests/cluster-addons/monitoring/values.yaml
+++ b/manifests/cluster-addons/monitoring/values.yaml
@@ -5,14 +5,14 @@ k8s-monitoring:
   destinations:
     - name: loki
       type: loki
-      url: http://loki-gateway.meta.svc.cluster.local/loki/api/v1/push
+      url: http://monitoring-loki-gateway.monitoring.svc.cluster.local/loki/api/v1/push
 
   clusterEvents:
     enabled: true
-    collector: alloy-logs
-    namespaces:
-      - meta
-      - prod
+    collector: monitoring-alloy-logs
+  #   namespaces:
+  #     - meta
+  #     - prod
 
   nodeLogs:
     enabled: false
@@ -20,7 +20,7 @@ k8s-monitoring:
   podLogs:
     enabled: true
     gatherMethod: kubernetesApi
-    collector: alloy-logs
+    collector: monitoring-alloy-logs
     labelsToKeep:
       [
         'app_kubernetes_io_name',
@@ -36,9 +36,9 @@ k8s-monitoring:
       ]
     structuredMetadata:
       pod: pod # Set structured metadata "pod" from label "pod"
-    namespaces:
-      - meta
-      - prod
+  #   namespaces:
+  #     - meta
+  #     - prod
 
   # Collectors
   alloy-singleton:
@@ -162,7 +162,7 @@ grafana:
           type: loki
           access: proxy
           orgId: 1
-          url: http://loki-gateway.meta.svc.cluster.local:80
+          url: http://monitoring-loki-gateway.monitoring.svc.cluster.local:80
           basicAuth: false
           isDefault: false
           version: 1
