--- a/manifests/cluster-addons/monitoring/values.yaml
+++ b/manifests/cluster-addons/monitoring/values.yaml
@@ -47,7 +47,7 @@ k8s-monitoring:
   alloy-metrics:
     enabled: false
 
-  alloy-logs:
+  monitoring-alloy-logs:
     enabled: true
     # Required when using the Kubernetes API to pod logs
     alloy:
