--- a/manifests/cluster-addons/monitoring/values.yaml
+++ b/manifests/cluster-addons/monitoring/values.yaml
@@ -1,6 +1,6 @@
 k8s-monitoring:
   cluster:
-    name: meta-monitoring-tutorial
+    name: whpah
 
   destinations:
     - name: loki
@@ -10,9 +10,6 @@ k8s-monitoring:
   clusterEvents:
     enabled: true
     collector: alloy-logs
-  #   namespaces:
-  #     - meta
-  #     - prod
 
   nodeLogs:
     enabled: false
@@ -21,6 +18,8 @@ k8s-monitoring:
     enabled: true
     gatherMethod: kubernetesApi
     collector: alloy-logs
+    excludeNamespaces:
+      - monitoring
     labelsToKeep:
       [
         'app_kubernetes_io_name',
@@ -36,9 +35,6 @@ k8s-monitoring:
       ]
     structuredMetadata:
       pod: pod # Set structured metadata "pod" from label "pod"
-  #   namespaces:
-  #     - meta
-  #     - prod
 
   # Collectors
   alloy-singleton:
