--- a/manifests/cluster-addons/monitoring/values.yaml
+++ b/manifests/cluster-addons/monitoring/values.yaml
@@ -18,8 +18,10 @@ k8s-monitoring:
     enabled: true
     gatherMethod: kubernetesApi
     collector: alloy-logs
-    excludeNamespaces:
-      - monitoring
+    namespaces:
+      - spenn
+      - five31
+      - bakseter-net
     labelsToKeep:
       [
         'app_kubernetes_io_name',
@@ -74,10 +76,6 @@ loki:
             period: 24h
     ingester:
       chunk_encoding: snappy
-    tracing:
-      enabled: true
-    pattern_ingester:
-      enabled: true
     limits_config:
       allow_structured_metadata: true
       volume_enabled: true
@@ -85,7 +83,7 @@ loki:
       enable_api: true
     querier:
       # Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
-      max_concurrent: 4
+      max_concurrent: 2
 
   minio:
     enabled: true
