--- a/manifests/applications/bakseter-net/deployment.yml
+++ b/manifests/applications/bakseter-net/deployment.yml
@@ -22,4 +22,18 @@ spec:
         - name: web
           image: ghcr.io/bakseter/bakseter.net:latest
           ports:
-            - containerPort: 80
+            - containerPort: 8080
+          securityContext:
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+      securityContext:
+        fsGroup: 1001
+        runAsGroup: 1001
+        runAsUser: 1001
+        seccompProfile:
+          type: RuntimeDefault
+        supplementalGroups:
+          - 1001
