--- a/manifests/applications/spenn/app-deployment.yml
+++ b/manifests/applications/spenn/app-deployment.yml
@@ -42,3 +42,17 @@ spec:
                   name: database-secret
           ports:
             - containerPort: 8080
+          securityContext:
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+      securityContext:
+        fsGroup: 1001
+        runAsGroup: 1001
+        runAsUser: 1001
+        seccompProfile:
+          type: RuntimeDefault
+        supplementalGroups:
+          - 1001
