--- a/manifests/applications/bakseter-net/verticalpodautoscaler.yml
+++ b/manifests/applications/bakseter-net/verticalpodautoscaler.yml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
-  name: app
+  name: web
   namespace: spenn
 spec:
   targetRef:
     apiVersion: 'apps/v1'
     kind: Deployment
-    name: app
+    name: web
   updatePolicy:
     updateMode: 'Auto'
