--- a/manifests/applications/five31/database-verticalpodautoscaler.yml
+++ b/manifests/applications/five31/database-verticalpodautoscaler.yml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
-  name: app
-  namespace: spenn
+  name: database
+  namespace: five31
 spec:
   targetRef:
     apiVersion: 'apps/v1'
-    kind: Deployment
-    name: app
+    kind: StatefulSet
+    name: database
   updatePolicy:
     updateMode: 'Auto'
