--- a/manifests/cluster-addons/monitoring/Chart.yaml
+++ b/manifests/cluster-addons/monitoring/Chart.yaml
@@ -11,3 +11,6 @@ dependencies:
   - name: grafana
     version: 8.12.0
     repository: https://grafana.github.io/helm-charts
+  - name: grafana-operator
+    version: 5.17.1
+    repository: oci://ghcr.io/grafana/helm-charts/grafana-operator
