Move from grafana to grafana-operator

--- a/manifests/cluster-addons/monitoring/templates/grafana.yml
+++ b/manifests/cluster-addons/monitoring/templates/grafana.yml
@@ -5,6 +5,28 @@ metadata:
   labels:
     dashboards: 'grafana'
 spec:
+  ingress:
+    metadata:
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt
+        traefik.ingress.kubernetes.io/router.middlewares: oauth2-proxy-forwardauth@kubernetescrd,oauth2-proxy-errors@kubernetescrd
+    spec:
+      ingressClassName: traefik
+      rules:
+        - host: grafana.bakseter.net
+          http:
+            paths:
+              - backend:
+                  service:
+                    name: grafana-service
+                    port:
+                      number: 3000
+                path: /
+                pathType: Prefix
+      tls:
+        - hosts:
+            - grafana.bakseter.net
+          secretName: grafana-tls
   deployment:
     spec:
       template:
