Allow cross namespace

--- a/manifests/cluster-addons/monitoring/templates/loki.yml
+++ b/manifests/cluster-addons/monitoring/templates/loki.yml
@@ -3,9 +3,7 @@ kind: GrafanaDatasource
 metadata:
   name: loki
 spec:
-  instanceSelector:
-    matchLabels:
-      dashboards: 'grafana'
+  allowCrossNamespaceImport: true
   datasource:
     name: loki
     type: loki
