--- a/manifests/cluster-addons/monitoring/templates/loki.yml
+++ b/manifests/cluster-addons/monitoring/templates/loki.yml
@@ -3,6 +3,9 @@ kind: GrafanaDatasource
 metadata:
   name: loki
 spec:
+  instanceSelector:
+    matchLabels:
+      dashboards: 'grafana'
   allowCrossNamespaceImport: true
   datasource:
     name: loki
