--- a/manifests/applications/spenn/grafanadashboard.yml
+++ b/manifests/applications/spenn/grafanadashboard.yml
@@ -7,6 +7,7 @@ spec:
     matchLabels:
       dashboards: 'grafana'
   resyncPeriod: 30s
+  allowCrossNamespaceImport: true
   json: >
     {
     "annotations": {
