Add resource exclusions

--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -12,6 +12,14 @@ argo-cd:
 
     cm:
       admin.enabled: false
+      resource.exclusions: |
+        - apiGroups:
+            - "*"
+          clusters:
+            - "*"
+          kinds:
+            - Endpoints
+            - EndpointSlice
       dex.config: |
         connectors:
           - type: authproxy
