--- a/manifests/applications/goodegang-com/deployment.yml
+++ b/manifests/applications/goodegang-com/deployment.yml
@@ -20,6 +20,6 @@ spec:
     spec:
       containers:
         - name: web
-          image: ghcr.io/bakseter/goodegang-com:latest
+          image: ghcr.io/bakseter/goodegang.com:latest
           ports:
             - containerPort: 80
