--- a/manifests/applications/goodegang-com/deployment.yml
+++ b/manifests/applications/goodegang-com/deployment.yml
@@ -20,6 +20,26 @@ spec:
     spec:
       containers:
         - name: web
-          image: ghcr.io/bakseter/goodegang.com:latest
+          image: ghcr.io/bakseter/goodegang-com:latest
           ports:
-            - containerPort: 80
+            - containerPort: 8080
+          volumeMounts:
+            - name: nginx-tmp
+              mountPath: /tmp/nginx
+          securityContext:
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+      volumes:
+        - name: nginx-tmp
+          emptyDir: {}
+      securityContext:
+        fsGroup: 1001
+        runAsGroup: 1001
+        runAsUser: 1001
+        seccompProfile:
+          type: RuntimeDefault
+        supplementalGroups:
+          - 1001
