--- a/manifests/applications/goodegang-com/verticalpodautoscaler.yml
+++ b/manifests/applications/goodegang-com/verticalpodautoscaler.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: web
-  namespace: bakseter-net
+  namespace: goodegang-com
 spec:
   targetRef:
     apiVersion: 'apps/v1'
