--- a/manifests/applications/goodegang-com/deployment.yml
+++ b/manifests/applications/goodegang-com/deployment.yml
@@ -37,6 +37,7 @@ spec:
           emptyDir: {}
       securityContext:
         fsGroup: 1001
+        runAsNonRoot: true
         runAsGroup: 1001
         runAsUser: 1001
         seccompProfile:
