Set dockercontainers: false

--- a/manifests/cluster-addons/monitoring/values.yaml
+++ b/manifests/cluster-addons/monitoring/values.yaml
@@ -51,6 +51,7 @@ k8s-monitoring:
     alloy:
       mounts:
         varlog: false
+        dockercontainers: false
       clustering:
         enabled: true
 
