cleanup: remove unused kubernetes manifests and update argocd configuration

--- a/manifests/cluster-addons/argocd/templates/certificate.yaml
+++ b/manifests/cluster-addons/argocd/templates/certificate.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretName: ingress-tls
   dnsNames:
-    - argocd.bakseter.net
+    - argocd.whpah.com
   issuerRef:
     name: letsencrypt
     kind: ClusterIssuer
