--- a/manifests/cluster-addons/argocd/templates/ingressroute.yaml
+++ b/manifests/cluster-addons/argocd/templates/ingressroute.yaml
@@ -8,7 +8,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`argocd.bakseter.net`)
+      match: Host(`argocd.whpah.com`)
       priority: 10
       services:
         - name: argocd-server
@@ -17,7 +17,7 @@ spec:
         - name: forwardauth
           namespace: oauth2-proxy
     - kind: Rule
-      match: Host(`argocd.bakseter.net`) && Header(`Content-Type`, `application/grpc`)
+      match: Host(`argocd.whpah.com`) && Header(`Content-Type`, `application/grpc`)
       priority: 11
       services:
         - name: argocd-server
