--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -1,45 +1,14 @@
 argo-cd:
   global:
-    domain: argocd.bakseter.net
-    revisionHistoryLimit: 1
+    domain: argocd.whpah.com
+
     networkPolicy:
       create: true
 
   configs:
     repositories:
       argocd:
-        url: https://github.com/bakseter/whpah
-
-    cm:
-      admin.enabled: false
-      dex.config: |
-        connectors:
-          - type: authproxy
-            id: oauth2-proxy
-            name: Proxy
-            config:
-              userHeader: X-Auth-Request-Email
-              groupHeader: X-Auth-Request-Groups
-
-    rbac:
-      scopes: '[groups, email]'
-      policy.default: ''
-      policy.csv: |
-        p, role:org-admin, *, get, *, allow
-        p, role:org-admin, applications, sync, *, allow
-        p, role:org-admin, applicationsets, sync, *, allow
-        g, andreas_tkd@hotmail.com, role:org-admin
+        url: https://github.com/olemp/whpah.git
 
     dex:
-      enabled: true
-
-    params:
-      server.insecure: true
-
-  notifications:
-    enabled: false
-
-  controller:
-    env:
-      - name: ARGOCD_APPLICATION_TREE_SHARD_SIZE
-        value: '50'
+      enabled: false
