--- a/manifests/cluster-addons/cert-manager/templates/clusterissuer.yaml
+++ b/manifests/cluster-addons/cert-manager/templates/clusterissuer.yaml
@@ -4,7 +4,7 @@ metadata:
   name: letsencrypt
 spec:
   acme:
-    email: andreas_tkd@hotmail.com
+    email: olemp@computas.com
     privateKeySecretRef:
       name: letsencrypt
     server: https://acme-v02.api.letsencrypt.org/directory
